--- a/tfp07/main.tex
+++ b/tfp07/main.tex
@@ -52,7 +52,8 @@
     while the third author was at LRI.}}
 \authorrunning{S. Conchon \and J.-C. Filli\^atre \and J. Signoles}
 
-\institute{LRI Universit\'e Paris Sud 91405 Orsay France \\
+\institute{LRI, Univ Paris-Sud, CNRS, Orsay F-91405\\
+INRIA Futurs, ProVal, Orsay F-91893\\
   \email{\{conchon,filliatr\}@lri.fr}
   \and Laboratoire S\^uret\'e des Logiciels, CEA-LIST \\
   \email{Julien.Signoles@cea.fr}}
