--- a/slides/lsl/slides.tex
+++ b/slides/lsl/slides.tex
@@ -152,7 +152,7 @@ end
 
 \begin{slide}\slidetitle{Composants}
 ~\\
-\psfig{file=/home/jsignole/dev/ocamlgraph/slides/lsl/interface.eps,width=\textwidth}
+\psfig{file=interface.eps,width=\textwidth}
 
 \begin{points}
 \item 8 \bleu{persistantes}:
