--- a/tfp07/main.tex
+++ b/tfp07/main.tex
@@ -15,8 +15,8 @@
 %
 %-----------------------------------------------------------------------------
 
-
-\documentclass[tfpsymp]{tfp05symp}
+\documentclass[tfpsymp,pagenumbers]{tfp07symp}
+\setcounter{paper}{12}
 
 \usepackage{amsmath}
 \usepackage{url}
