--- a/tfp07/biblio.bib
+++ b/tfp07/biblio.bib
@@ -120,3 +120,10 @@
   year =	 2005
 }
 
+@Misc{Oleg,
+  author =	 {Oleg Kiselyov},
+  title =	 {{Applicative translucent functors in Haskell}},
+  year =	 2004,
+  note =	 {At \url{http://www.haskell.org/pipermail/haskell/2004-August/014463.html}}
+}
+
