--- a/tfp07/main.tex
+++ b/tfp07/main.tex
@@ -33,17 +33,7 @@
 
 \begin{document}
 
-%\conferenceinfo{GPCE '06}{October 22--26 2006, Portland, Oregon.} 
-%\copyrightyear{2006} 
-%\copyrightdata{[to be supplied]} 
-
-%\titlebanner{}        % These are ignored unless
-%\preprintfooter{}   % 'preprint' option specified.
-
 \title{Designing a Generic Graph Library \\ using ML Functors}
-%\subtitle{}
-
-%\authorinfo{Submitted for blind review}{}{}
 
 \author
     {Sylvain Conchon\inst{1} \and 
@@ -55,7 +45,7 @@
 \institute{LRI, Univ Paris-Sud, CNRS, Orsay F-91405\\
 INRIA Futurs, ProVal, Orsay F-91893\\
   \email{\{conchon,filliatr\}@lri.fr}
-  \and Laboratoire S\^uret\'e des Logiciels, CEA-LIST \\
+  \and CEA-LIST, Laboratoire S\^uret\'e des Logiciels \\
   \email{Julien.Signoles@cea.fr}}
 
 %% \institute{LRI Universit\'e Paris Sud 91405 Orsay France \\
@@ -186,7 +176,7 @@ other vertices on the same row, column and $3\times 3$ group.
 Solving the Sudoku is equivalent to 9-coloring this graph.
 Figure~\ref{fig:sudoku} displays the sketch of a solution to
 this problem using \ocamlgraph\footnote{Full source code for the
-  Sudoku example is available on the web page of \ocamlgraph.}. There are
+  Sudoku example is given in appendix~\ref{appendix}.}. There are
 four steps in this code:
 \begin{enumerate}
 \item We choose a graph data structure for our Sudoku solver: it is an
@@ -195,7 +185,7 @@ four steps in this code:
   In this structure, vertices are also
   equipped with integer marks, that are used to store the assigned
   colors.
-\item We create the sudoku grid and fill it with the initial
+\item We create the Sudoku grid and fill it with the initial
   constraints.
 \item We obtain a coloring algorithm for our graph data structure.
 \item We solve the Sudoku problem by 9-coloring the graph.
@@ -412,11 +402,78 @@ apply an existing algorithm on his own graph data structure.
 %% , which is an original feature of \ocamlgraph\ w.r.t. other graph
 %% libraries.
 
+\subsection{Example: Depth-First Traversal}
+\label{dfs}
+
+We illustrate the generic programming of graph algorithms on the
+particular example of depth-first prefix traversal (DFS).  To implement DFS,
+we need to iterate over the graph vertices and over the edges leaving
+a given vertex. If we do not assume any kind of marks on vertices, we
+also need to build a data structure to store the visited nodes. 
+We choose a hash table for this purpose and thus we require a hash
+function and an equality over vertices.
+Thus the minimal input signature for the DFS functor is as follows:
+\begin{ocaml}
+module type G = sig
+  type t
+  module V : sig
+    type t 
+    val hash : t -> int 
+    val equal : t -> t -> bool 
+  end
+  val iter_vertex : (V.t -> unit) -> t -> unit
+  val iter_succ : (V.t -> unit) -> t -> V.t -> unit
+end
+\end{ocaml}
+The DFS algorithm is then implemented as a functor with an argument of
+signature \texttt{G}. The result of functor application is a module
+providing a single function \texttt{dfs} to traverse a given graph
+while applying a given function on all visited vertices:
+\begin{ocaml}
+module Dfs(G : G) : 
+  sig val dfs : (G.V.t -> unit) -> G.t -> unit end
+\end{ocaml}
+To implement this functor, we first instantiate \ocaml's generic hash
+tables on graph vertices:
+\begin{ocaml}
+module Dfs(G : G) = struct
+  module H = Hashtbl.Make(G.V)
+\end{ocaml}
+Then we can implement the traversal. The following code uses a hash
+table \texttt{h} to store the vertices already visited and an explicit
+stack \texttt{stack} to store the vertices to be visited (to avoid the
+possible stack overflow of a recursive implementation). Function
+\texttt{G.iter\_vertex} is used to start a DFS on every vertex. The
+DFS itself is performed in function \texttt{loop} using \texttt{G.iter\_succ}:
+\begin{ocaml}
+  let dfs f g = 
+    let h = H.create 65537 in
+    let stack = Stack.create () in
+    let push v = 
+      if not (H.mem h v) then 
+      begin H.add h v (); Stack.push v stack end
+    in
+    let loop () =
+      while not (Stack.is_empty stack) do
+        let v = Stack.pop stack in
+        f v;
+        G.iter_succ push g v
+      done
+    in
+    G.iter_vertex (fun v -> push v; loop ()) g
+end
+\end{ocaml}
+Beside this simple algorithm, \ocamlgraph\ provides other kinds of
+traversals (breadth-first, postfix, etc.) and more efficient
+implementations when the graph data structure contains mutable marks
+on vertices.
+
 \subsection{Example: Graph Coloring}
 \label{coloring}
 
-We illustrate the generic programming of graph algorithms on the
-particular example of graph coloring.  For the purpose of our
+As a second example, we present a graph coloring algorithm used in our
+Sudoku solver.
+For the purpose of our
 algorithm, we require the presence of \texttt{get} and \texttt{set}
 operations on integer marks associated to vertices. We use these marks
 to store the color assigned to each vertex. We also need iterators
@@ -457,6 +514,7 @@ solving the Sudoku amounts to 9-coloring graph \texttt{g}:
 \begin{alltt}
 C.coloring g 9
 \end{alltt}
+
 
 \section{Benchmarks}\label{bench}
 
@@ -543,18 +601,18 @@ vertices and edges types. Thus they are much more representative of
 \section{Conclusion}
 
 We presented \ocamlgraph, a highly generic graph library for \ocaml\
-providing several graph data structures and graph algorithms. 
+providing several graph data structures and graph algorithms.
 Algorithms are written independently from graph data structures, which
 allows combining user data structure (resp. algorithm) with
-\ocamlgraph algorithm (resp. data structure).
-This genericity is obtained using \ocaml module
-system and especially its functors which allow sharing large pieces
-of code.
-
-To our knowledge, there is no library for any applicative language as
-generic as \ocamlgraph. Regarding imperative languages, graph
-libraries are rarely as generic and never provide as many
-different data structures.
+\ocamlgraph algorithm (resp. data structure).  To our knowledge, there
+is no library for any applicative language as generic as \ocamlgraph.
+This genericity is obtained using \ocaml module system and especially
+its functors which allow sharing large pieces of code and provide
+greater consistency than the mere use of higher-order functions.  The
+same level of genericity could probably be achieved using Haskell's
+multi-parameter type classes~\cite{Oleg}.  Regarding imperative
+languages, graph libraries are rarely as generic and never provide as
+many different data structures.
 
 Since its first release (Feb. 2004), the number of \ocamlgraph users
 has been increasing steadily and several of them contributed code to the
@@ -581,6 +639,80 @@ library where data structures and algorithms are separated.
 % Smith, P. Q. reference text
 
 % \end{thebibliography}
+
+\appendix
+\section{Simple Sudoku Solver using Ocamlgraph}\label{appendix}
+Below is the full listing for a Sudoku solver using \ocamlgraph, as
+described in this paper. This program reads the Sudoku problem on 
+standard input and prints the solution on standard output.
+% It can be compiled as follows:
+% \begin{center}
+%   \verb!ocamlopt -o sudoku graph.cmxa sudoku.ml!
+% \end{center}
+{\small
+\begin{verbatim}
+open Graph
+
+(* We use undirected graphs with nodes containing 
+   a pair of integers (the cell coordinates in 
+   0..8 x 0..8). *)
+module G = Imperative.Graph.Abstract
+             (struct type t = int * int end)
+
+(* The Sudoku grid = a graph with 9x9 nodes *)
+let g = G.create ()
+
+(* We create the 9x9 nodes, add them to the graph 
+   and keep them in a matrix for later access *)
+let nodes = 
+  let new_node i j = 
+    let v = G.V.create (i, j) in G.add_vertex g v; v 
+  in
+  Array.init 9 (fun i -> Array.init 9 (new_node i))
+
+let node i j = nodes.(i).(j) 
+
+(* We add the edges: two nodes are connected whenever 
+   they can't have the same value *)
+let () =
+  for i = 0 to 8 do for j = 0 to 8 do
+    for k = 0 to 8 do
+      if k <> i then G.add_edge g (node i j) (node k j);
+      if k <> j then G.add_edge g (node i j) (node i k);
+    done;
+    let gi = 3 * (i / 3) and gj = 3 * (j / 3) in
+    for di = 0 to 2 do for dj = 0 to 2 do
+      let i' = gi + di and j' = gj + dj in
+      if i' <> i || j' <> j then 
+        G.add_edge g (node i j) (node i' j')
+    done done
+  done done
+
+(* We read the initial constraints from standard input *)
+let () =
+  for i = 0 to 8 do
+    let s = read_line () in
+    for j = 0 to 8 do match s.[j] with
+      | '1'..'9' as ch -> 
+        G.Mark.set (node i j) (Char.code ch - Char.code '0')
+      | _ -> ()
+    done
+  done
+
+(* We solve the Sudoku by 9-coloring the graph g *)
+module C = Coloring.Mark(G)
+let () = C.coloring g 9
+
+(* We display the solution *)
+let () = 
+  for i = 0 to 8 do
+    for j = 0 to 8 do 
+      Format.printf "%d" (G.Mark.get (node i j)) 
+    done;
+    Format.printf "\n";
+  done;
+  Format.printf "@?"
+\end{verbatim}}
 
 \end{document}
 %1-59593-090-6/05/0007
