--- a/slides/tfp07/slides.tex
+++ b/slides/tfp07/slides.tex
@@ -12,9 +12,9 @@
 
 \usetheme{Cea}
 
-\newcommand{\rouge}[1]{{\color{red}#1}}
+\newcommand{\rouge}[1]{{\color{orange}#1}}
 \newcommand{\bleu}[1]{{\color{blue}#1}}
-\newcommand{\monvert}[1]{{\color{green}#1}}
+\newcommand{\monvert}[1]{{\color{blue}#1}}
 \newcommand{\motcle}[1]{{\color{blue}#1}}
 \newcommand{\ocamlgraph}{\textsf{OcamlGraph}}
 \newcommand{\fleche}{\ensuremath{\rightarrow}}
@@ -43,11 +43,11 @@
     \textcolor{orange}{\Large Designing a Generic Graph Library \\[0.7em]
       using ML Funtors}\\[2em]
 
-    \textcolor{blue}{\large Sylvain Conchon, Jean-Christophe Filliâtre}
+    \textcolor{orange}{\large Sylvain Conchon, Jean-Christophe Filliâtre}
     \\[0.7em]
-    \textcolor{green}{\large LRI, Paris Sud University}\\[1.4em]
-    \textcolor{blue}{\large \textit{Julien Signoles}}\\[0.7em]
-    \textcolor{green}{\large CEA LIST, Software Safety Labs}
+    \textcolor{blue}{\large LRI, Paris Sud University}\\[1.4em]
+    \textcolor{orange}{\large \textit{Julien Signoles}}\\[0.7em]
+    \textcolor{blue}{\large CEA LIST}
   \end{center}
 \end{frame}
 
